ansible-playbook/kubernetes/roles/master/files/customer-ws/customer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-ws-deployment
  namespace: iris-ws
  labels:
    app: customer-ws
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer-ws
  template:
    metadata:
      labels:
        app: customer-ws
    spec:
      containers:
      - name: customer-ws
        image: wi11i4m/customer-ws:1.0.7
        imagePullPolicy: Always
        ports:
        - containerPort: 9990
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: customer-ws-service
  namespace: iris-ws
spec:
  ports:
    - name: web-port
      protocol: "TCP"
      port: 8080
      targetPort: 8080
      nodePort: 30980
    - name: admin-port
      protocol: "TCP"
      port: 9990
      targetPort: 9990
      nodePort: 30999
  type: LoadBalancer  
  selector:
    app: customer-ws
